Add global styles and flexbox grid

--- a/ui/package.json
+++ b/ui/package.json
@@ -13,14 +13,17 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-scripts": "3.4.1",
     "formik": "2.1.4",
     "jsonwebtoken": "8.5.1",
+    "lodash-es": "4.17.15",
     "query-string": "6.13.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-flexbox-grid": "2.1.2",
     "react-hooks-global-state": "1.0.0",
+    "react-scripts": "3.4.1",
     "styled-components": "5.1.1",
+    "styled-normalize": "8.0.7",
     "yup": "0.29.1"
   },
   "devDependencies": {
