--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
     "react-flexbox-grid": "2.1.2",
     "react-hooks-global-state": "1.0.0",
     "react-scripts": "3.4.1",
+    "react-simple-chatbot": "0.6.1",
     "styled-components": "5.1.1",
     "styled-normalize": "8.0.7",
     "yup": "0.29.1"
