--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
     "react-dom": "16.13.1",
     "react-flexbox-grid": "2.1.2",
     "react-hooks-global-state": "1.0.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "react-simple-chatbot": "0.6.1",
     "styled-components": "5.1.1",
