Questionnaire fin d'année (v1) (#4)
* Ajout d'un brouillon pour le questionnaire de fin d'année

* Questionnaire fin d'année (v1)

--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,9 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.29",
+    "@fortawesome/free-solid-svg-icons": "5.13.1",
+    "@fortawesome/react-fontawesome": "0.1.11",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
@@ -21,6 +24,7 @@
     "react-dom": "16.13.1",
     "react-flexbox-grid": "2.1.2",
     "react-hooks-global-state": "1.0.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "react-simple-chatbot": "0.6.1",
     "styled-components": "5.1.1",
