--- a/reverse_proxy/app/nginx/conf.d/default.conf
+++ b/reverse_proxy/app/nginx/conf.d/default.conf
@@ -2,7 +2,6 @@ server {
     listen 80;
     server_name localhost;
     server_tokens off;
-    include /etc/nginx/conf.d/locations.inc;
 
     location /sockjs-node {
         proxy_pass http://ui:3000;
@@ -11,4 +10,8 @@ server {
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $host;
     }
+
+    include /etc/nginx/conf.d/locations/ui.inc;
+    include /etc/nginx/conf.d/locations/api.inc;
+    include /etc/nginx/conf.d/locations/smtp.inc;
 }
