--- a/reverse_proxy/app/nginx/nginx.conf
+++ b/reverse_proxy/app/nginx/nginx.conf
@@ -23,5 +23,11 @@ http {
     limit_req_zone $binary_remote_addr zone=flood:10m rate=400r/m;
     limit_req_log_level error;
 
+    # http://nginx.org/en/docs/http/websocket.html
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
+
     include /etc/nginx/conf.d/*.conf;
 }
