--- a/server/package.json
+++ b/server/package.json
@@ -34,11 +34,15 @@
     "bunyan": "1.8.14",
     "bunyan-prettystream": "0.1.3",
     "csv-parser": "2.3.3",
+    "ejs": "3.1.3",
     "env-var": "6.2.0",
     "express": "4.17.1",
     "lodash": "4.17.15",
+    "mjml": "4.6.3",
     "moment": "2.27.0",
     "mongodb": "3.5.9",
+    "nodemailer": "6.4.10",
+    "nodemailer-html-to-text": "3.1.0",
     "nodemon": "2.0.3",
     "oleoduc": "0.3.0",
     "unzip": "0.1.11",
