--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
     "react-simple-chatbot": "0.6.1",
     "styled-components": "5.1.1",
     "styled-normalize": "8.0.7",
+    "webfontloader": "1.6.28",
     "yup": "0.29.1"
   },
   "devDependencies": {
