--- a/reverse_proxy/app/nginx/conf.d/default.conf
+++ b/reverse_proxy/app/nginx/conf.d/default.conf
@@ -11,7 +11,5 @@ server {
         proxy_set_header Host $host;
     }
 
-    include /etc/nginx/conf.d/locations/ui.inc;
-    include /etc/nginx/conf.d/locations/api.inc;
-    include /etc/nginx/conf.d/locations/smtp.inc;
+    include /etc/nginx/conf.d/locations/*.inc;
 }
