--- a/server/package.json
+++ b/server/package.json
@@ -13,20 +13,6 @@
   "engines": {
     "node": ">=12.11.0"
   },
-  "devDependencies": {
-    "eslint": "7.3.1",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.1.4",
-    "faker": "4.1.0",
-    "mocha": "8.0.1",
-    "prettier": "2.0.5"
-  },
-  "prettier": {
-    "printWidth": 120,
-    "bracketSpacing": true,
-    "trailingComma": "es5"
-  },
   "dependencies": {
     "@hapi/joi": "17.1.1",
     "body-parser": "1.19.0",
@@ -47,5 +33,20 @@
     "oleoduc": "0.3.0",
     "unzip": "0.1.11",
     "unzip-stream": "0.3.0"
+  },
+  "devDependencies": {
+    "axiosist": "0.9.0",
+    "eslint": "7.3.1",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "faker": "4.1.0",
+    "mocha": "8.0.1",
+    "prettier": "2.0.5"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "bracketSpacing": true,
+    "trailingComma": "es5"
   }
 }
