--- a/server/package.json
+++ b/server/package.json
@@ -32,7 +32,8 @@
     "nodemon": "2.0.3",
     "oleoduc": "0.3.0",
     "unzip": "0.1.11",
-    "unzip-stream": "0.3.0"
+    "unzip-stream": "0.3.0",
+    "uuid": "8.2.0"
   },
   "devDependencies": {
     "axiosist": "0.9.0",
