--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.29",
+    "@fortawesome/free-regular-svg-icons": "5.14.0",
     "@fortawesome/free-solid-svg-icons": "5.13.1",
     "@fortawesome/react-fontawesome": "0.1.11",
     "@testing-library/jest-dom": "4.2.4",
@@ -21,6 +22,7 @@
     "lodash-es": "4.17.15",
     "query-string": "6.13.1",
     "react": "16.13.1",
+    "react-app-polyfill": "1.0.6",
     "react-dom": "16.13.1",
     "react-flexbox-grid": "2.1.2",
     "react-hooks-global-state": "1.0.0",
