--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "boom": "7.3.0",
     "bunyan": "1.8.14",
     "bunyan-prettystream": "0.1.3",
+    "bunyan-slack": "0.0.10",
     "csv-parser": "2.3.3",
     "ejs": "3.1.3",
     "env-var": "6.2.0",
