--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "ejs": "3.1.3",
     "env-var": "6.2.0",
     "express": "4.17.1",
+    "iconv-lite": "0.6.2",
     "lodash": "4.17.15",
     "mjml": "4.6.3",
     "moment": "2.27.0",
@@ -33,6 +34,8 @@
     "nodemailer-html-to-text": "3.1.0",
     "nodemon": "2.0.3",
     "oleoduc": "0.3.0",
+    "passport": "0.4.1",
+    "passport-http": "0.3.0",
     "unzip": "0.1.11",
     "unzip-stream": "0.3.0",
     "uuid": "8.2.0"
