--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "deca/index.js",
   "scripts": {
-    "start": "nodemon --ignore test/ src/index.js",
-    "debug": "nodemon --inspect=0.0.0.0 --signal SIGINT --ignore test/ src/index.js",
+    "start": "nodemon --ignore test/ src/cli.js http",
+    "debug": "nodemon --inspect=0.0.0.0 --signal SIGINT --ignore test/ src/cli.js http",
+    "cli": "node src/cli.js",
     "test": "mocha --recursive --exit --timeout 5000 test/",
     "test:coverage": "nyc --reporter=html --temp-dir .coverage/build --report-dir .coverage mocha --recursive --exit --timeout 500 test/"
   },
@@ -21,6 +22,7 @@
     "bunyan": "1.8.14",
     "bunyan-prettystream": "0.1.3",
     "bunyan-slack": "0.0.10",
+    "commander": "6.0.0",
     "csv-parser": "2.3.3",
     "ejs": "3.1.3",
     "env-var": "6.2.0",
