--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@hapi/joi": "17.1.1",
+    "axios": "0.20.0",
     "body-parser": "1.19.0",
     "boom": "7.3.0",
     "bunyan": "1.8.14",
