--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,20 @@ jobs:
           status: ${{ job.status }}
         if: failure()
 
+  trigger_deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get current branch name
+        uses: mdecoleman/pr-branch-name@1.0.0
+        id: vars
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Repository Dispatch
         uses: peter-evans/repository-dispatch@v1
         with:
           repository: mission-apprentissage/sirius-infra
           token: ${{ secrets.DEVOPS_ACCESS_TOKEN }}
           event-type: deploy
-          client-payload: '{"envName": "recette"}'
+          client-payload: '{"envName": "recette", "branchName":"${{ steps.vars.outputs.branch }}"}'
         if: github.ref == 'ref/head/develop'
