--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,11 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - shell: bash
-        run: echo '::set-env name=SIRIUS_HEAD_REF::${{ github.head_ref }}'
-
-      - name: Get the current branch name
-        shell: bash
-        run: echo "::set-output name=branchName::${SIRIUS_HEAD_REF:-${GITHUB_REF##*/}}"
+        run: echo "::set-output name=branchName::${GITHUB_HEAD_REF:-${GITHUB_REF##*/}}"
         id: vars
 
       - shell: bash
@@ -49,7 +45,7 @@ jobs:
 
       - name: Checkout project
         uses: actions/checkout@v2
-        if: github.ref == 'refs/heads/develop'
+        if: steps.vars.outputs.branchName == 'develop'
 
       - name: Request deployment
         uses: peter-evans/repository-dispatch@v1
@@ -57,5 +53,5 @@ jobs:
           repository: mission-apprentissage/sirius-infra
           token: ${{ secrets.DEVOPS_ACCESS_TOKEN }}
           event-type: deploy
-          client-payload: '{"envName": "recette", "branchName":"${{ steps.vars.outputs.branchName }}"}'
-        if: github.ref == 'refs/heads/develop'
+          client-payload: '{"envName": "recette", "branchName":"develop"}'
+        if: steps.vars.outputs.branchName == 'develop'
