--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,20 +36,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - shell: bash
-        run: echo '::set-env name=SIRIUS_HEAD_REF::${{ github.head_ref }}'
-
-      - name: Get the current branch name
-        shell: bash
-        run: echo "::set-output name=branchName::${SIRIUS_HEAD_REF:-${GITHUB_REF##*/}}"
-        id: vars
-
-      - shell: bash
-        run: echo "${{steps.vars.outputs.branchName}}"
-
       - name: Checkout project
         uses: actions/checkout@v2
-        if: github.ref == 'refs/heads/develop'
+
+      - name: Get current branch name
+        uses: ./.github/actions/branchName
+        id: vars
 
       - name: Request deployment
         uses: peter-evans/repository-dispatch@v1
@@ -57,5 +49,5 @@ jobs:
           repository: mission-apprentissage/sirius-infra
           token: ${{ secrets.DEVOPS_ACCESS_TOKEN }}
           event-type: deploy
-          client-payload: '{"envName": "recette", "branchName":"${{ steps.vars.outputs.branchName }}"}'
-        if: github.ref == 'refs/heads/develop'
+          client-payload: '{"envName": "recette", "branchName":"develop"}'
+        if: steps.vars.outputs.branchName == 'develop'
