--- a/reverse_proxy/app/nginx/nginx.conf
+++ b/reverse_proxy/app/nginx/nginx.conf
@@ -1,3 +1,5 @@
+load_module modules/ngx_http_headers_more_filter_module.so;
+
 user  nginx;
 worker_processes  1;
 
@@ -11,12 +13,20 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-
+    server_tokens off;
     resolver 127.0.0.11 ipv6=off valid=5s;
 
     access_log /data/access.log;
 
-    sendfile        on;
+    server_tokens off;
+    more_clear_headers Server;
+    add_header X-Xss-Protection "1; mode=block" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubdomains" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade";
+
+    sendfile on;
     keepalive_timeout  65;
     gzip  on;
 
