--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "emoji-strip": "1.0.1",
     "env-var": "6.2.0",
     "express": "4.17.1",
+    "helmet": "4.1.1",
     "iconv-lite": "0.6.2",
     "lodash": "4.17.15",
     "mjml": "4.6.3",
