--- a/reverse_proxy/app/nginx/conf.d/sirius.conf
+++ b/reverse_proxy/app/nginx/conf.d/sirius.conf
@@ -2,6 +2,7 @@ server {
     listen 80;
     server_name localhost;
     server_tokens off;
+    gzip on;
 
     location /sockjs-node {
         proxy_pass http://ui:3000;
