--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "nodemon --ignore test/ src/cli.js http",
     "debug": "nodemon --inspect=0.0.0.0 --signal SIGINT --ignore test/ src/cli.js http",
-    "cli": "node src/cli.js",
     "test": "mocha --recursive --exit --timeout 5000 test/",
-    "test:coverage": "nyc --reporter=html --temp-dir .coverage/build --report-dir .coverage mocha --recursive --exit --timeout 500 test/"
+    "test:coverage": "nyc --reporter=html --temp-dir .coverage/build --report-dir .coverage mocha --recursive --exit --timeout 500 test/",
+    "preinstall": "git config core.hooksPath misc/git-hooks && chmod +x ../misc/git-hooks/*"
   },
   "author": "",
   "license": "ISC",
