--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     build:
       context: ui
     mem_limit: 256m
+    restart: unless-stopped
     networks:
       - sirius_network
     depends_on:
