--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "node": ">=12.11.0"
   },
   "dependencies": {
-    "@hapi/joi": "17.1.1",
+    "joi": "17.7.0",
     "axios": "0.21.0",
     "body-parser": "1.19.0",
     "boom": "7.3.0",
