--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
     "joi": "17.7.0",
     "axios": "1.3.1",
     "body-parser": "1.20.1",
-    "boom": "7.3.0",
+    "@hapi/boom": "10.0.0",
     "bunyan": "1.8.14",
     "bunyan-prettystream": "0.1.3",
     "bunyan-slack": "0.0.10",
