--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "env-var": "7.0.0",
     "express": "4.17.1",
     "helmet": "4.2.0",
+    "http-errors": "2.0.0",
     "iconv-lite": "0.6.2",
     "lodash": "4.17.20",
     "mjml": "4.7.1",
