--- a/server/package.json
+++ b/server/package.json
@@ -24,9 +24,7 @@
     "bunyan-prettystream": "0.1.3",
     "bunyan-slack": "0.0.10",
     "commander": "6.2.0",
-    "csv-parser": "3.0.0",
     "ejs": "3.1.5",
-    "emoji-strip": "1.0.1",
     "env-var": "7.0.0",
     "express": "4.17.1",
     "helmet": "4.2.0",
@@ -41,9 +39,7 @@
     "nodemon": "2.0.6",
     "oleoduc": "0.4.0",
     "passport": "0.4.1",
-    "passport-http": "0.3.0",
-    "sanitize-html": "2.2.0",
-    "uuid": "8.3.2"
+    "passport-http": "0.3.0"
   },
   "devDependencies": {
     "axiosist": "0.9.0",
