--- a/server/package.json
+++ b/server/package.json
@@ -46,7 +46,7 @@
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.2.1",
-    "faker": "5.1.0",
+    "@faker-js/faker": "5.1.0",
     "mocha": "8.2.1",
     "nodemon": "2.0.6",
     "nyc": "15.1.0",
