--- a/ui/package.json
+++ b/ui/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "serve": "ws --port 3000 -d build --log.format dev --spa index.html",
     "eject": "react-scripts eject"
@@ -21,13 +21,13 @@
     "jsonwebtoken": "8.5.1",
     "lodash-es": "4.17.15",
     "query-string": "6.13.7",
-    "react": "18.2.0",
+    "react": "17.0.1",
     "react-app-polyfill": "2.0.0",
-    "react-dom": "18.2.0",
+    "react-dom": "17.0.1",
     "react-flexbox-grid": "2.1.2",
     "react-hooks-global-state": "1.0.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.1",
     "styled-components": "5.2.1",
     "styled-normalize": "8.0.7",
     "webfontloader": "1.6.28",
