--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,9 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@chakra-ui/react": "1.8.9",
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
     "@fortawesome/free-regular-svg-icons": "5.15.1",
     "@fortawesome/free-solid-svg-icons": "5.15.1",
@@ -18,6 +21,7 @@
     "@testing-library/react": "11.2.2",
     "@testing-library/user-event": "12.5.0",
     "formik": "2.2.6",
+    "framer-motion": "4.1.17",
     "jsonwebtoken": "8.5.1",
     "lodash-es": "4.17.15",
     "query-string": "6.13.7",
