--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@chakra-ui/icons": "1.1.7",
     "@chakra-ui/react": "1.8.9",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
