--- a/ui/package.json
+++ b/ui/package.json
@@ -31,6 +31,7 @@
     "react-dom": "17.0.1",
     "react-flexbox-grid": "2.1.2",
     "react-hooks-global-state": "1.0.1",
+    "react-qr-code": "2.0.11",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "5.2.1",
