chore(deps): add rjsf and chakra-ui deps

--- a/ui/package.json
+++ b/ui/package.json
@@ -18,9 +18,14 @@
     "@fortawesome/free-regular-svg-icons": "5.15.1",
     "@fortawesome/free-solid-svg-icons": "5.15.1",
     "@fortawesome/react-fontawesome": "0.1.13",
+    "@rjsf/chakra-ui": "5.1.0",
+    "@rjsf/core": "5.1.0",
+    "@rjsf/utils": "5.1.0",
+    "@rjsf/validator-ajv8": "5.1.0",
     "@testing-library/jest-dom": "5.11.6",
     "@testing-library/react": "11.2.2",
     "@testing-library/user-event": "12.5.0",
+    "chakra-react-select": "4.4.3",
     "formik": "2.2.6",
     "framer-motion": "4.1.17",
     "jsonwebtoken": "8.5.1",
