--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "bunyan-prettystream": "0.1.3",
     "bunyan-slack": "1.0.0",
     "commander": "10.0.0",
+    "cookie-parser": "1.4.6",
     "ejs": "3.1.8",
     "env-var": "7.3.0",
     "express": "4.18.2",
@@ -31,6 +32,7 @@
     "http-errors": "2.0.0",
     "iconv-lite": "0.6.3",
     "joi": "17.7.0",
+    "jsonwebtoken": "9.0.0",
     "lodash": "4.17.21",
     "mjml": "4.13.0",
     "moment": "2.29.4",
@@ -40,7 +42,10 @@
     "nodemailer-html-to-text": "3.2.0",
     "oleoduc": "0.8.0",
     "passport": "0.6.0",
-    "passport-http": "0.3.0"
+    "passport-http": "0.3.0",
+    "passport-jwt": "4.0.1",
+    "passport-local": "1.0.0",
+    "passport-local-mongoose": "7.1.2"
   },
   "devDependencies": {
     "@faker-js/faker": "5.1.0",
