--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "5.15.1",
     "@fortawesome/free-solid-svg-icons": "5.15.1",
     "@fortawesome/react-fontawesome": "0.1.13",
+    "@monaco-editor/react": "4.4.6",
     "@rjsf/chakra-ui": "5.1.0",
     "@rjsf/core": "5.1.0",
     "@rjsf/utils": "5.1.0",
