--- a/ui/package.json
+++ b/ui/package.json
@@ -27,6 +27,7 @@
     "@testing-library/react": "11.2.2",
     "@testing-library/user-event": "12.5.0",
     "chakra-react-select": "4.4.3",
+    "chakra-ui-steps": "1.8.0",
     "formik": "2.2.6",
     "framer-motion": "4.1.17",
     "jsonwebtoken": "8.5.1",
