--- a/server/package.json
+++ b/server/package.json
@@ -50,14 +50,18 @@
   "devDependencies": {
     "@faker-js/faker": "5.1.0",
     "axiosist": "1.0.1",
+    "chai": "4.3.7",
     "eslint": "8.34.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.2.1",
     "mocha": "10.2.0",
+    "mock-req-res": "1.2.1",
     "nodemon": "2.0.20",
     "nyc": "15.1.0",
-    "prettier": "2.8.4"
+    "prettier": "2.8.4",
+    "sinon": "15.0.1",
+    "sinon-chai": "3.7.0"
   },
   "prettier": {
     "printWidth": 120,
