feat(lint): add rule for no-unpublished-require

--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -12,5 +12,10 @@
   },
   "parserOptions": {
     "ecmaVersion": 2018
+  },
+  "rules": {
+    "node/no-unpublished-require": ["error", {
+      "allowModules": ["chai", "mock-req-res", "sinon", "sinon-chai"]
+    }]
   }
 }
