--- a/server/package.json
+++ b/server/package.json
@@ -61,7 +61,8 @@
     "nyc": "15.1.0",
     "prettier": "2.8.4",
     "sinon": "15.0.1",
-    "sinon-chai": "3.7.0"
+    "sinon-chai": "3.7.0",
+    "supertest": "6.3.3"
   },
   "prettier": {
     "printWidth": 120,
