--- a/reverse_proxy/app/nginx/conf.d/sirius.conf
+++ b/reverse_proxy/app/nginx/conf.d/sirius.conf
@@ -4,7 +4,7 @@ server {
     server_tokens off;
     gzip on;
 
-    location /sockjs-node {
+    location /ws {
         proxy_pass http://ui:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
