--- a/ui/package.json
+++ b/ui/package.json
@@ -29,8 +29,7 @@
     "react-qr-code": "2.0.11",
     "react-router-dom": "6.9.0",
     "react-scripts": "5.0.1",
-    "styled-components": "5.3.9",
-    "styled-normalize": "8.0.7",
+    "webfontloader": "1.6.28",
     "yup": "1.0.2"
   },
   "devDependencies": {
