--- a/ui/package.json
+++ b/ui/package.json
@@ -40,6 +40,7 @@
     "eslint-config-prettier": "8.7.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
+    "local-web-server": "4.2.1",
     "prettier": "2.8.4"
   },
   "browserslist": {
