--- a/ui/.eslintrc
+++ b/ui/.eslintrc
@@ -4,7 +4,9 @@
   "plugins": ["react"],
   "rules": {
     "react/prop-types": "off",
-    "react/jsx-uses-react": 1
+    "react/jsx-uses-react": 1,
+    "no-unused-vars": "warn",
+    "no-prototype-builtins": 0
   },
   "parserOptions": {
     "sourceType": "module",
@@ -12,6 +14,7 @@
   },
   "env":{
     "browser": true,
-    "node": true
+    "node": true,
+    "es6": true
   }
 }
