feat(temoignages): use echarts

--- a/ui/package.json
+++ b/ui/package.json
@@ -21,12 +21,12 @@
     "@rjsf/validator-ajv8": "5.2.1",
     "chakra-react-select": "4.6.0",
     "chakra-ui-steps": "2.0.4",
-    "chart.js": "4.2.1",
+    "echarts": "5.4.2",
+    "echarts-for-react": "3.0.2",
     "formik": "2.2.9",
     "framer-motion": "10.3.2",
     "react": "18.2.0",
     "react-app-polyfill": "3.0.0",
-    "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "react-qr-code": "2.0.11",
     "react-router-dom": "6.9.0",
