--- a/ui/.eslintrc
+++ b/ui/.eslintrc
@@ -6,7 +6,8 @@
     "react/prop-types": "off",
     "react/jsx-uses-react": 1,
     "no-unused-vars": "warn",
-    "no-prototype-builtins": 0
+    "no-prototype-builtins": 0,
+    "react/no-unescaped-entities": "off"
   },
   "parserOptions": {
     "sourceType": "module",
