--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
     "chakra-react-select": "4.6.0",
     "echarts": "5.4.2",
     "echarts-for-react": "3.0.2",
+    "file-saver": "2.0.5",
     "formik": "2.2.9",
     "framer-motion": "10.3.2",
     "react": "18.2.0",
@@ -33,6 +34,7 @@
     "react-sortablejs": "6.1.4",
     "sortablejs": "1.15.0",
     "webfontloader": "1.6.28",
+    "xlsx": "0.18.5",
     "yup": "1.0.2"
   },
   "devDependencies": {
