--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -46,12 +46,28 @@ services:
       - .local/mongodb/configdb:/data/configdb
 
   smtp:
-    image: mailhog/mailhog
+    image: axllent/mailpit:v1.5.5
     container_name: sirius_smtp
-    mem_limit: 128m
-    ports:
-      - 1025:1025
+    deploy:
+      resources:
+        limits:
+          memory: 128m
+      update_config:
+        failure_action: rollback
+      rollback_config:
+        parallelism: 0
     networks:
       - sirius_network
+    ports:
+      - 1025:1025
+      - 8025:8025
+    volumes:
+      - sirius_mailpit_data:/data
     environment:
-      - MH_UI_WEB_PATH=smtp
+      - MP_DATA_FILE=/data/mailpit.db
+      - MP_WEBROOT=smtp
+
+volumes:
+  sirius_mailpit_data:
+    driver: local
+    name: sirius_mailpit_data
