--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "ejs": "3.1.9",
     "env-var": "7.3.0",
     "express": "4.18.2",
+    "express-rate-limit": "6.10.0",
     "helmet": "6.0.1",
     "http-errors": "2.0.0",
     "iconv-lite": "0.6.3",
