--- a/ui/package.json
+++ b/ui/package.json
@@ -25,6 +25,7 @@
     "file-saver": "2.0.5",
     "formik": "2.2.9",
     "framer-motion": "10.3.2",
+    "html-react-parser": "4.2.2",
     "html2canvas": "1.4.1",
     "jszip": "3.10.1",
     "jwt-decode": "3.1.2",
