--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,7 @@
     "@rjsf/core": "5.2.1",
     "@rjsf/utils": "5.2.1",
     "@rjsf/validator-ajv8": "5.2.1",
+    "@tanstack/react-table": "8.10.3",
     "chakra-react-select": "4.6.0",
     "echarts": "5.4.2",
     "echarts-for-react": "3.0.2",
