--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
     "@monaco-editor/react": "4.4.6",
+    "@react-spring/web": "9.7.3",
     "@rjsf/chakra-ui": "5.2.1",
     "@rjsf/core": "5.2.1",
     "@rjsf/utils": "5.2.1",
