--- a/server/package.json
+++ b/server/package.json
@@ -47,7 +47,10 @@
     "passport-http": "0.3.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
-    "passport-local-mongoose": "7.1.2"
+    "passport-local-mongoose": "7.1.2",
+    "path": "0.12.7",
+    "pdf-lib": "1.17.1",
+    "qrcode": "1.5.3"
   },
   "devDependencies": {
     "@faker-js/faker": "7.6.0",
