--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@hapi/boom": "10.0.0",
+    "@slack/bolt": "3.14.0",
     "axios": "1.3.1",
     "body-parser": "1.20.1",
     "bunyan": "1.8.15",
