--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "moment": "2.29.4",
     "mongodb": "4.13.0",
     "mongoose": "6.9.2",
+    "node-fetch": "3.3.2",
     "nodemailer": "6.9.1",
     "nodemailer-html-to-text": "3.2.0",
     "oleoduc": "0.8.0",
