--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "2.7.1",
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
+    "@fingerprintjs/botd": "1.7.2",
     "@monaco-editor/react": "4.4.6",
     "@react-spring/web": "9.7.3",
     "@rjsf/chakra-ui": "5.2.1",
