--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "cookie-parser": "1.4.6",
     "ejs": "3.1.9",
     "env-var": "7.3.0",
+    "exceljs": "4.4.0",
     "express": "4.18.2",
     "express-rate-limit": "6.10.0",
     "helmet": "6.0.1",
