--- a/ui/package.json
+++ b/ui/package.json
@@ -40,6 +40,7 @@
     "react-qr-code": "2.0.11",
     "react-router-dom": "6.9.0",
     "react-scripts": "5.0.1",
+    "react-simple-tooltip": "2.6.3",
     "react-sortablejs": "6.1.4",
     "sortablejs": "1.15.0",
     "webfontloader": "1.6.28",
