--- a/ui/package.json
+++ b/ui/package.json
@@ -42,6 +42,7 @@
     "react-scripts": "5.0.1",
     "react-simple-tooltip": "2.6.3",
     "react-sortablejs": "6.1.4",
+    "react-spinners": "0.13.8",
     "sortablejs": "1.15.0",
     "webfontloader": "1.6.28",
     "xlsx": "0.18.5",
