--- a/ui/package.json
+++ b/ui/package.json
@@ -34,6 +34,7 @@
     "html2canvas": "1.4.1",
     "jszip": "3.10.1",
     "jwt-decode": "3.1.2",
+    "masonic": "3.7.0",
     "react": "18.2.0",
     "react-app-polyfill": "3.0.0",
     "react-dom": "18.2.0",
