--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,8 @@
     "formik": "2.2.9",
     "framer-motion": "10.3.2",
     "html-react-parser": "4.2.2",
+    "html-to-image": "1.11.11",
+    "jspdf": "2.5.1",
     "jwt-decode": "3.1.2",
     "masonic": "3.7.0",
     "react": "18.2.0",
