--- a/ui/package.json
+++ b/ui/package.json
@@ -37,6 +37,7 @@
     "react": "18.2.0",
     "react-app-polyfill": "3.0.0",
     "react-dom": "18.2.0",
+    "react-player": "2.15.1",
     "react-router-dom": "6.9.0",
     "react-scripts": "5.0.1",
     "react-simple-tooltip": "2.6.3",
