--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "@rjsf/core": "5.2.1",
     "@rjsf/utils": "5.2.1",
     "@rjsf/validator-ajv8": "5.2.1",
+    "@tanstack/react-query": "5.28.9",
     "@tanstack/react-table": "8.10.3",
     "chakra-react-select": "4.6.0",
     "echarts": "5.4.2",
