--- a/ui/package.json
+++ b/ui/package.json
@@ -33,11 +33,11 @@
     "html-to-image": "1.11.11",
     "jspdf": "2.5.1",
     "jwt-decode": "3.1.2",
-    "masonic": "3.7.0",
     "react": "18.2.0",
     "react-app-polyfill": "3.0.0",
     "react-dom": "18.2.0",
     "react-player": "2.15.1",
+    "react-responsive-masonry": "2.2.0",
     "react-router-dom": "6.9.0",
     "react-scripts": "5.0.1",
     "react-simple-tooltip": "2.6.3",
