--- a/.infra/ansible/roles/setup/tasks/install-scripts.yml
+++ b/.infra/ansible/roles/setup/tasks/install-scripts.yml
@@ -1,6 +1,6 @@
 - name: Création des répertoires tools
   file:
-    path: "/opt/pilotage/tools/{{ item.path }}/"
+    path: "/opt/sirius/tools/{{ item.path }}/"
     state: directory
   with_filetree:
     - app/tools
@@ -9,7 +9,7 @@
 - name: Copie des fichiers 'overrides'
   ansible.builtin.template:
     src: "{{ item.src }}"
-    dest: "/opt/pilotage/tools/{{ item.path }}"
+    dest: "/opt/sirius/tools/{{ item.path }}"
     mode: "g+x"
   with_filetree:
     - app/tools
@@ -18,7 +18,7 @@
 - name: Copie des scripts bash
   ansible.builtin.template:
     src: "{{ item }}"
-    dest: /opt/pilotage/{{ item | basename }}
+    dest: /opt/sirius/{{ item | basename }}
     mode: "g+x"
   with_fileglob:
     - "app/*.sh"
@@ -29,18 +29,3 @@
     state: absent
     regexp: "mna"
 
-# - name: Création du répertoire pilotage
-#   ansible.builtin.file:
-#     path: /opt/pilotage/
-#     state: directory
-
-# - shell: ls /opt/pilotage/*.sh
-#   register: nopasswd_script_files
-
-# - name: Ajout des scripts en NOPASSWD pour le groupe 'mna'
-#   lineinfile:
-#     dest: /etc/sudoers
-#     state: present
-#     regexp: "{{item}}"
-#     line: "%mna        ALL=(ALL)       NOPASSWD: {{item}}"
-#   with_items: "{{ nopasswd_script_files.stdout_lines }}"
