--- a/.infra/ansible/roles/deploy/tasks/main.yml
+++ b/.infra/ansible/roles/deploy/tasks/main.yml
@@ -1,11 +1,11 @@
 - name: "Clone du repository (branche : {{ git_revision }})"
   become: yes
   git:
-    repo: "https://github.com/mission-apprentissage/tjp-pilotage.git"
+    repo: "https://github.com/mission-apprentissage/sirius.git"
     version: "{{ git_revision }}"
     force: yes
     accept_hostkey: yes
-    dest: /opt/pilotage/repository
+    dest: /opt/sirius/repository
 
 - name: Prune docker images
   become: yes
@@ -18,13 +18,13 @@
 - name: Create and start services
   become: yes
   community.docker.docker_compose:
-    project_src: /opt/pilotage/repository
+    project_src: /opt/sirius/repository
     build: true
     restarted: true
     files:
-      - /opt/pilotage/repository/docker-compose.yml
-      - /opt/pilotage/.overrides/docker-compose.common.yml
-      - /opt/pilotage/.overrides/docker-compose.env.yml
+      - /opt/sirius/repository/docker-compose.yml
+      - /opt/sirius/.overrides/docker-compose.common.yml
+      - /opt/sirius/.overrides/docker-compose.env.yml
   vars:
     ansible_command_timeout: 30
   register: output
