infra(env): use sirius env

--- a/.infra/ansible/env.ini
+++ b/.infra/ansible/env.ini
@@ -1,30 +1,17 @@
-[production]
-135.125.66.137
-[production:vars]
-dns_name=orion.inserjeunes.beta.gouv.fr
-host_name=orion-production
-update_sshd_config=true
-git_revision=develop
-env_type=production
-#backup_partition_name=pilotage
-#backup_cron=true
-
 [recette]
-57.128.62.142
+141.95.166.47
 [recette:vars]
-dns_name=orion-recette.inserjeunes.beta.gouv.fr
-host_name=orion-recette
-update_sshd_config=true
-git_revision=develop
 env_type=recette
-#backup_partition_name=pilotage
-#backup_cron=true
+git_revision=develop
+dns_name=sirius-recette.inserjeunes.beta.gouv.fr
+host_name=sirius-recette
+update_sshd_config=true
 
-[recette2]
-162.19.124.176
-[recette2:vars]
-dns_name=orion-recette-2.inserjeunes.beta.gouv.fr
-host_name=orion-recette-2
+[production]
+141.95.167.141
+[production:vars]
+env_type=production
+git_revision=master
+dns_name=sirius.inserjeunes.beta.gouv.fr
+host_name=sirius-production
 update_sshd_config=true
-git_revision=develop
-env_type=recette
