infra(auth): replace cracklib by pwquality

--- a/.infra/ansible/roles/setup/tasks/configure-auth.yml
+++ b/.infra/ansible/roles/setup/tasks/configure-auth.yml
@@ -11,7 +11,7 @@
 
 - name: Install pam packages
   apt:
-    name: [ 'libpam-cracklib' ]
+    name: [ 'libpam-pwquality' ]
 
 - name: Ensure group "mna" exists
   group:
@@ -21,8 +21,8 @@
 - name: Set password policy
   lineinfile:
     path: /etc/pam.d/common-password
-    regexp: "pam_cracklib.so"
-    line: "password   requisite   pam_cracklib.so retry=3 minlen=14 difok=3 dcredit=-1 ucredit=-1 lcredit=-1 ocredit=-1"
+    regexp: "pam_pwquality.so"
+    line: "password   requisite   pam_pwquality.so retry=3 minlen=14 difok=3 dcredit=-1 ucredit=-1 lcredit=-1 ocredit=-1"
 
 - name: Set umask=077 for root user
   lineinfile:
