--- a/.infra/ansible/roles/setup/files/app/.overrides/production/docker-compose.env.yml
+++ b/.infra/ansible/roles/setup/files/app/.overrides/production/docker-compose.env.yml
@@ -1,59 +1,29 @@
+version: "2.4"
 services:
-  app:
-    image: pilotage_app
-    container_name: pilotage_app
-    restart: "always"
-    ports:
-      - "127.0.0.1:5000:5000"
-      - "127.0.0.1:3000:3000"
+  ui:
     build:
-      context: .
-      dockerfile: Dockerfile
       args:
-        - NEXT_PUBLIC_ENV=production
-        - NEXT_PUBLIC_BASE_URL=https://{{ dns_name }}
-        - NEXT_PUBLIC_SERVER_URL=https://{{ dns_name }}/api
-        - NEXT_PUBLIC_APP_CONTAINER_URL=http://app:5000/api
-        - NEXT_PUBLIC_CRISP_TOKEN={{ vault[env_type].NEXT_PUBLIC_CRISP_TOKEN }}
-        - PILOTAGE_GIT_REVISION={{ git_revision }}
-    networks:
-      - pilotage_network
-    environment:
-      - PILOTAGE_POSTGRES_URI={{ vault[env_type].PILOTAGE_POSTGRES_URI }}
-      - PILOTAGE_POSTGRES_CA={{ vault[env_type].PILOTAGE_POSTGRES_CA }}
-      - PILOTAGE_ENV=production
-      - PILOTAGE_LOG_LEVEL=info
-      - PILOTAGE_HOST={{ host_name }}
-      - PILOTAGE_LOG_DESTINATIONS=stdout,mongodb,slack
-      - PILOTAGE_PUBLIC_URL=https://{{ dns_name }}
-      - PILOTAGE_SLACK_WEBHOOK_URL={{ vault[env_type].PILOTAGE_SLACK_WEBHOOK_URL }}
-      - PILOTAGE_SLACK_TOKEN={{ vault[env_type].PILOTAGE_SLACK_TOKEN }}
-      - PILOTAGE_SLACK_SIGNING_SECRET={{ vault[env_type].PILOTAGE_SLACK_SIGNING_SECRET }}
-      - PILOTAGE_SLACK_CHANEL={{ vault[env_type].PILOTAGE_SLACK_CHANEL }}
-      - PILOTAGE_API_KEY={{ vault[env_type].PILOTAGE_API_KEY }}
-      - PILOTAGE_AUTH_PASSWORD_HASH_ROUNDS={{ vault[env_type].PILOTAGE_AUTH_PASSWORD_HASH_ROUNDS }}
-      - PILOTAGE_INSERJEUNES_USERNAME={{ vault[env_type].PILOTAGE_INSERJEUNES_USERNAME }}
-      - PILOTAGE_INSERJEUNES_PASSWORD={{ vault[env_type].PILOTAGE_INSERJEUNES_PASSWORD }}
-      - PILOTAGE_AUTH_JWT_SECRET={{ vault[env_type].PILOTAGE_AUTH_JWT_SECRET }}
-      - PILOTAGE_ACTIVATION_JWT_SECRET={{ vault[env_type].PILOTAGE_ACTIVATION_JWT_SECRET }}
-      - PILOTAGE_RESET_PASSWORD_JWT_SECRET={{ vault[env_type].PILOTAGE_RESET_PASSWORD_JWT_SECRET }}
-      - PILOTAGE_EMAIL_FROM={{ vault[env_type].PILOTAGE_EMAIL_FROM }}
-      - PILOTAGE_EMAIL={{ vault[env_type].PILOTAGE_EMAIL }}
-      - PILOTAGE_SMTP_HOST={{ vault[env_type].PILOTAGE_SMTP_HOST }}
-      - PILOTAGE_SMTP_PORT={{ vault[env_type].PILOTAGE_SMTP_PORT }}
-      - PILOTAGE_SMTP_SECURE={{ vault[env_type].PILOTAGE_SMTP_SECURE }}
-      - PILOTAGE_SMTP_AUTH_USER={{ vault[env_type].PILOTAGE_SMTP_AUTH_USER }}
-      - PILOTAGE_SMTP_AUTH_PASS={{ vault[env_type].PILOTAGE_SMTP_AUTH_PASS }}
-      - PILOTAGE_DNE_CODE_VERIFIER_JWT_SECRET={{ vault[env_type].PILOTAGE_DNE_CODE_VERIFIER_JWT_SECRET }}
-      - PILOTAGE_DNE_CLIENT_ID={{ vault[env_type].PILOTAGE_DNE_CLIENT_ID }}
-      - PILOTAGE_DNE_CLIENT_SECRET={{ vault[env_type].PILOTAGE_DNE_CLIENT_SECRET }}
-      - PILOTAGE_DNE_REDIRECT_URI=https://{{ dns_name }}/api/dne_connect
-      - NOTION_TOKEN={{ vault[env_type].NOTION_TOKEN }}
-      - NOTION_DB_CHANGELOG_ID={{ vault[env_type].NOTION_DB_CHANGELOG_ID }}
-      - NOTION_DB_GLOSSAIRE_ID={{ vault[env_type].NOTION_DB_GLOSSAIRE_ID }}
+        - SIRIUS_ENV=production
 
-  metabase:
+  server:
     environment:
-      - MB_SITE_URL=https://orion.inserjeunes.beta.gouv.fr/metabase
-      - MB_DB_CONNECTION_URI={{ vault[env_type].PILOTAGE_METABASE_DB_URI }}
-      - MB_DB_TYPE=postgres
+      - SIRIUS_ENV=production
+      - SIRIUS_LOG_LEVEL=info
+      - SIRIUS_LOG_TYPE=json
+      - SIRIUS_MONGODB_URI={{ vault[env_type].SIRIUS_MONGODB_URI }}
+      - SIRIUS_PUBLIC_URL=https://sirius.inserjeunes.beta.gouv.fr
+      - SIRIUS_SMTP_HOST=smtp-relay.brevo.com
+      - SIRIUS_SMTP_PORT=587
+      - SIRIUS_SMTP_SECURE=true
+      - SIRIUS_SLACK_WEBHOOK_URL={{ vault[env_type].SIRIUS_SLACK_WEBHOOK_URL }}
+      - SIRIUS_SMTP_AUTH_USER=contact@inserjeunes.beta.gouv.fr
+      - SIRIUS_SMTP_AUTH_PASS={{ vault[env_type].SIRIUS_SMTP_AUTH_PASS }}
+      - SIRIUS_EMAIL_FROM=contact-sirius@inserjeunes.beta.gouv.fr
+      - SIRIUS_AUTH_JWT_SECRET={{ vault[env_type].SIRIUS_AUTH_JWT_SECRET }}
+      - SIRIUS_AUTH_REFRESH_TOKEN_SECRET={{ vault[env_type].SIRIUS_AUTH_REFRESH_TOKEN_SECRET }}
+      - SIRIUS_AUTH_SESSION_EXPIRY=900
+      - SIRIUS_AUTH_REFRESH_TOKEN_EXPIRY=2592000
+      - SIRIUS_AUTH_COOKIE_SECRET={{ vault[env_type].SIRIUS_AUTH_COOKIE_SECRET }}
+      - SIRIUS_SLACK_TOKEN={{ vault[env_type].SIRIUS_SLACK_TOKEN }}
+      - SIRIUS_SLACK_SIGNING_SECRET={{ vault[env_type].SIRIUS_SLACK_SIGNING_SECRET }}
+      - SIRIUS_SLACK_CHANNEL=sirius-bot
