--- a/.infra/ansible/roles/setup/files/app/.overrides/recette/docker-compose.env.yml
+++ b/.infra/ansible/roles/setup/files/app/.overrides/recette/docker-compose.env.yml
@@ -1,77 +1,35 @@
+version: "2.4"
 services:
-  app:
-    image: pilotage_app
-    container_name: pilotage_app
-    restart: "always"
-    ports:
-      - "127.0.0.1:5000:5000"
-      - "127.0.0.1:3000:3000"
+  ui:
     build:
-      context: .
-      dockerfile: Dockerfile
       args:
-        - NEXT_PUBLIC_ENV=recette
-        - NEXT_PUBLIC_BASE_URL=https://{{ dns_name }}
-        - NEXT_PUBLIC_SERVER_URL=https://{{ dns_name }}/api
-        - NEXT_PUBLIC_APP_CONTAINER_URL=http://app:5000/api
-        - PILOTAGE_GIT_REVISION={{ git_revision }}
-        - NEXT_PUBLIC_CRISP_TOKEN={{ vault[env_type].NEXT_PUBLIC_CRISP_TOKEN }}
-    depends_on:
-      - postgres
-    networks:
-      - pilotage_network
-    environment:
-      - PILOTAGE_POSTGRES_URI={{ vault[env_type].PILOTAGE_POSTGRES_URI }}
-      - PILOTAGE_ENV=recette
-      - PILOTAGE_LOG_LEVEL=info
-      - PILOTAGE_LOG_DESTINATIONS=stdout,mongodb,slack
-      - PILOTAGE_PUBLIC_URL=https://{{ dns_name }}
-      - PILOTAGE_HOST={{ host_name }}
-      - PILOTAGE_SLACK_WEBHOOK_URL={{ vault[env_type].PILOTAGE_SLACK_WEBHOOK_URL }}
-      - PILOTAGE_SLACK_TOKEN={{ vault[env_type].PILOTAGE_SLACK_TOKEN }}
-      - PILOTAGE_SLACK_SIGNING_SECRET={{ vault[env_type].PILOTAGE_SLACK_SIGNING_SECRET }}
-      - PILOTAGE_SLACK_CHANEL={{ vault[env_type].PILOTAGE_SLACK_CHANEL }}
-      - PILOTAGE_API_KEY={{ vault[env_type].PILOTAGE_API_KEY }}
-      - PILOTAGE_AUTH_PASSWORD_HASH_ROUNDS={{ vault[env_type].PILOTAGE_AUTH_PASSWORD_HASH_ROUNDS }}
-      - PILOTAGE_INSERJEUNES_USERNAME={{ vault[env_type].PILOTAGE_INSERJEUNES_USERNAME }}
-      - PILOTAGE_INSERJEUNES_PASSWORD={{ vault[env_type].PILOTAGE_INSERJEUNES_PASSWORD }}
-      - PILOTAGE_AUTH_JWT_SECRET={{ vault[env_type].PILOTAGE_AUTH_JWT_SECRET }}
-      - PILOTAGE_ACTIVATION_JWT_SECRET={{ vault[env_type].PILOTAGE_ACTIVATION_JWT_SECRET }}
-      - PILOTAGE_RESET_PASSWORD_JWT_SECRET={{ vault[env_type].PILOTAGE_RESET_PASSWORD_JWT_SECRET }}
-      - PILOTAGE_EMAIL_FROM={{ vault[env_type].PILOTAGE_EMAIL_FROM }}
-      - PILOTAGE_EMAIL={{ vault[env_type].PILOTAGE_EMAIL }}
-      - PILOTAGE_SMTP_HOST={{ vault[env_type].PILOTAGE_SMTP_HOST }}
-      - PILOTAGE_SMTP_PORT={{ vault[env_type].PILOTAGE_SMTP_PORT }}
-      - PILOTAGE_SMTP_SECURE={{ vault[env_type].PILOTAGE_SMTP_SECURE }}
-      - PILOTAGE_SMTP_AUTH_USER={{ vault[env_type].PILOTAGE_SMTP_AUTH_USER }}
-      - PILOTAGE_SMTP_AUTH_PASS={{ vault[env_type].PILOTAGE_SMTP_AUTH_PASS }}
-      - PILOTAGE_DNE_CODE_VERIFIER_JWT_SECRET={{ vault[env_type].PILOTAGE_DNE_CODE_VERIFIER_JWT_SECRET }}
-      - PILOTAGE_DNE_CLIENT_ID={{ vault[env_type].PILOTAGE_DNE_CLIENT_ID }}
-      - PILOTAGE_DNE_CLIENT_SECRET={{ vault[env_type].PILOTAGE_DNE_CLIENT_SECRET }}
-      - PILOTAGE_DNE_REDIRECT_URI=https://{{ dns_name }}/api/dne_connect
-      - NOTION_TOKEN={{ vault[env_type].NOTION_TOKEN }}
-      - NOTION_DB_CHANGELOG_ID={{ vault[env_type].NOTION_DB_CHANGELOG_ID }}
-      - NOTION_DB_GLOSSAIRE_ID={{ vault[env_type].NOTION_DB_GLOSSAIRE_ID }}
+        - SIRIUS_ENV=recette
 
-  postgres:
-    image: postgres:15.5
-    container_name: pilotage_postgres
-    restart: unless-stopped
-    ports:
-      - 5432:5432
-    networks:
-      - pilotage_network
+  server:
     environment:
-      - POSTGRES_PASSWORD={{ vault[env_type].PILOTAGE_POSTGRES_PASSWORD }}
-    volumes:
-      - /opt/pilotage/data/postgres/db:/var/lib/postgresql/data:z
-
-  reverse_proxy:
+      - SIRIUS_ENV=recette
+      - SIRIUS_LOG_LEVEL=info
+      - SIRIUS_LOG_TYPE=json
+      - SIRIUS_MONGODB_URI={{ vault[env_type].SIRIUS_MONGODB_URI }}
+      - SIRIUS_PUBLIC_URL=https://sirius-recette.inserjeunes.beta.gouv.fr
+      - SIRIUS_SMTP_HOST=smtp
+      - SIRIUS_SMTP_PORT=1025
+      - SIRIUS_SMTP_SECURE=true
+      - SIRIUS_SLACK_WEBHOOK_URL={{ vault[env_type].SIRIUS_SLACK_WEBHOOK_URL }}
+      - SIRIUS_SMTP_AUTH_USER=contact@inserjeunes.beta.gouv.fr
+      - SIRIUS_EMAIL_FROM=contact-sirius@inserjeunes.beta.gouv.fr
+      - SIRIUS_AUTH_JWT_SECRET={{ vault[env_type].SIRIUS_AUTH_JWT_SECRET }}
+      - SIRIUS_AUTH_REFRESH_TOKEN_SECRET={{ vault[env_type].SIRIUS_AUTH_REFRESH_TOKEN_SECRET }}
+      - SIRIUS_AUTH_SESSION_EXPIRY=900
+      - SIRIUS_AUTH_REFRESH_TOKEN_EXPIRY=2592000
+      - SIRIUS_AUTH_COOKIE_SECRET={{ vault[env_type].SIRIUS_AUTH_COOKIE_SECRET }}
+      - SIRIUS_SLACK_CHANNEL=sirius-bot
     depends_on:
       - smtp
 
   smtp:
     image: axllent/mailpit:v1.5.5
+    container_name: sirius_smtp
     deploy:
       resources:
         limits:
@@ -81,17 +39,32 @@ services:
       rollback_config:
         parallelism: 0
     networks:
-      - pilotage_network
+      - sirius_network
     ports:
       - 1025:1025
       - 8025:8025
     volumes:
-      - /opt/pilotage/data/mailpit:/data:z
+      - sirius_mailpit_data:/data
     environment:
       - MP_DATA_FILE=/data/mailpit.db
       - MP_WEBROOT=smtp
 
-  metabase:
-    environment:
-      - MB_SITE_URL=https://orion-recette.inserjeunes.beta.gouv.fr/metabase
-      - DEF=ok
+  mongodb:
+    image: mongo:4.4.1-bionic
+    command: mongod --auth
+    container_name: sirius_mongodb
+    tty: true
+    mem_limit: 1g
+    restart: unless-stopped
+    networks:
+      - sirius_network
+    volumes:
+      - /opt/sirius/data/mongodb/db:/data/db
+      - /opt/sirius/data/mongodb/configdb:/data/configdb
+      - /opt/sirius/data/mongodb/backups:/data/backups
+      - /opt/sirius/.overrides/mongodb/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d:ro
+
+volumes:
+  sirius_mailpit_data:
+    driver: local
+    name: sirius_mailpit_data
