--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -32,13 +32,20 @@ services:
     environment:
       - SIRIUS_ENV=dev
       - SIRIUS_PUBLIC_URL=http://localhost
-      - SIRIUS_AUTH_ADMIN_PASSWORD=12345
       - SIRIUS_SMTP_HOST=smtp
       - SIRIUS_SMTP_PORT=1025
     depends_on:
       - smtp
+      - mongodb
 
   mongodb:
+    image: mongo:4.4.1-bionic
+    container_name: sirius_mongodb
+    tty: true
+    mem_limit: 1g
+    restart: unless-stopped
+    networks:
+      - sirius_network
     ports:
       - "127.0.0.1:27017:27017"
     volumes:
