infra(env): add temp branch for testing

--- a/.infra/ansible/env.ini
+++ b/.infra/ansible/env.ini
@@ -2,7 +2,7 @@
 141.95.166.47
 [recette:vars]
 env_type=recette
-git_revision=develop
+git_revision=infra/migrate-infra
 dns_name=sirius-recette.inserjeunes.beta.gouv.fr
 host_name=sirius-recette
 update_sshd_config=true
@@ -11,7 +11,7 @@ update_sshd_config=true
 141.95.167.141
 [production:vars]
 env_type=production
-git_revision=master
+git_revision=infra/migrate-infra
 dns_name=sirius.inserjeunes.beta.gouv.fr
 host_name=sirius-production
 update_sshd_config=true
