infra(user): replace mna by ij

--- a/.infra/ansible/roles/setup/tasks/configure-auth.yml
+++ b/.infra/ansible/roles/setup/tasks/configure-auth.yml
@@ -13,9 +13,9 @@
   apt:
     name: [ 'libpam-pwquality' ]
 
-- name: Ensure group "mna" exists
+- name: Ensure group "ij" exists
   group:
-    name: mna
+    name: ij
     state: present
 
 - name: Set password policy
