--- a/.infra/ansible/roles/setup/tasks/_create-sudoers.yml
+++ b/.infra/ansible/roles/setup/tasks/_create-sudoers.yml
@@ -1,6 +1,6 @@
-- name: Vérification de l'existence du groupe "mna"
+- name: Vérification de l'existence du groupe "ij"
   group:
-    name: mna
+    name: ij
     state: present
 
 - name: "Création utilisateur {{ habilitation.username }}"
@@ -9,7 +9,7 @@
     password: "{{ vault[env_type].SIRIUS_HABILITATION_PASSWORD | password_hash('sha512')}}"
     update_password: on_create
     shell: /bin/bash
-    groups: sudo,mna
+    groups: sudo,ij
     append: yes
   register: user
 
