--- a/.infra/ansible/env.ini
+++ b/.infra/ansible/env.ini
@@ -3,7 +3,7 @@
 [recette:vars]
 env_type=recette
 git_revision=develop
-dns_name=sirius-recette.inserjeunes.beta.gouv.fr
+dns_name=sirius-recette.inserjeunes.beta.gouv.fr,sirius-recette.apprentissage.beta.gouv.fr
 host_name=sirius-recette
 update_sshd_config=true
 
@@ -12,6 +12,6 @@ update_sshd_config=true
 [production:vars]
 env_type=production
 git_revision=master
-dns_name=sirius.inserjeunes.beta.gouv.fr
+dns_name=sirius.inserjeunes.beta.gouv.fr,sirius.apprentissage.beta.gouv.fr
 host_name=sirius-production
 update_sshd_config=true
