--- a/.infra/ansible/roles/setup/files/app/.overrides/production/reverse_proxy/sirius.conf
+++ b/.infra/ansible/roles/setup/files/app/.overrides/production/reverse_proxy/sirius.conf
@@ -1,6 +1,16 @@
 server {
     listen 443 ssl;
-    server_name ~^(.+)$;
+    server_name sirius.apprentissage.beta.gouv.fr;
+
+    ssl_certificate /ssl/fullchain.pem;
+    ssl_certificate_key /ssl/privkey.pem;
+
+    return 301 https://sirius.inserjeunes.beta.gouv.fr$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name sirius.inserjeunes.beta.gouv.fr;
 
     ssl_certificate /ssl/fullchain.pem;
     ssl_certificate_key /ssl/privkey.pem;
