feat(infra): deactivate cron

--- a/.infra/ansible/roles/setup/tasks/generate-ssl-certificate.yml
+++ b/.infra/ansible/roles/setup/tasks/generate-ssl-certificate.yml
@@ -11,10 +11,10 @@
     var: output
   when: ssl.stat.exists == True
 
-- name: Add cron to ensure SSL certificate will be renewed
-  ansible.builtin.cron:
-    name: "renew-certificate"
-    minute: "0"
-    hour: "2"
-    weekday: "1"
-    job: "bash /opt/sirius/tools/ssl/renew-certificate.sh {{dns_name}} >> /var/log/cron.log 2>&1"
+#- name: Add cron to ensure SSL certificate will be renewed
+#  ansible.builtin.cron:
+#    name: "renew-certificate"
+#    minute: "0"
+#    hour: "2"
+#    weekday: "1"
+#    job: "bash /opt/sirius/tools/ssl/renew-certificate.sh {{dns_name}} >> /var/log/cron.log 2>&1"
