feat(infra): change docker to docker-ce

--- a/.infra/ansible/roles/setup/tasks/configure-system.yml
+++ b/.infra/ansible/roles/setup/tasks/configure-system.yml
@@ -30,7 +30,7 @@
         "git",
         "python3",
         "python3-pip",
-        "docker",
+        "docker-ce",
         "docker-compose",
       ]
 
