fix(extension): fix url

--- a/extension/sirius-onisep-injector/chrome/manifest.json
+++ b/extension/sirius-onisep-injector/chrome/manifest.json
@@ -17,7 +17,7 @@
       },
     "content_scripts": [
         {
-            "matches": ["https://*.onisep.fr/*", "http://localhost/*"],
+            "matches": ["https://*.onisep.fr/*"],
             "js": ["contentScript.js"]
         }
     ],
