infra(make): add dev env handling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     networks:
       - sirius_network
     environment:
+      - NODE_ENV=${NODE_ENV}
       - SIRIUS_LOG_LEVEL=info
       - SIRIUS_LOG_TYPE=console
       - SIRIUS_MONGODB_URI=mongodb://mongodb:27017/sirius?retryWrites=true&w=majority
