chore(lib): add ts and lint

--- a/server/package.json
+++ b/server/package.json
@@ -2,16 +2,15 @@
   "name": "sirius",
   "version": "1.0.0",
   "description": "",
-  "main": "deca/index.js",
   "scripts": {
-    "start": "nodemon --ignore test/ dist/cli.js http",
-    "debug": "nodemon --inspect=0.0.0.0 --signal SIGINT --ignore test/ dist/cli.js http",
-    "cli": "node dist/cli.js",
+    "start": "ts-node src/cli.ts http",
+    "debug": "nodemon --inspect=0.0.0.0 --signal SIGINT --ignore test/ dist/cli.ts http",
+    "cli": "ts-node -T src/cli.ts",
     "test": "mocha --require ts-node/register --recursive --exit --timeout 5000 test/**/*.test.ts",
     "test:watch": "nodemon --exec \"mocha --require ts-node/register --recursive --exit --timeout 5000 test/**/*.test.ts\"",
     "test:coverage": "nyc --reporter=html --temp-dir .coverage/build --report-dir .coverage mocha --require ts-node/register --recursive --exit --timeout 500 test/**/*.test.ts",
     "build": "tsc",
-    "dev": "ts-node src/cli.js http"
+    "dev": "nodemon --ignore test/ dist/cli.ts http"
   },
   "author": "",
   "license": "ISC",
@@ -58,26 +57,40 @@
     "passport-local-mongoose": "7.1.2",
     "path": "0.12.7",
     "pdf-lib": "1.17.1",
+    "pg": "8.12.0",
     "qrcode": "1.5.3"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "3.1.0",
+    "@eslint/js": "9.8.0",
     "@faker-js/faker": "7.6.0",
     "@types/node": "20.14.10",
+    "@types/pg": "8.11.6",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
     "chai": "4.3.7",
-    "eslint": "8.34.0",
-    "eslint-config-prettier": "8.6.0",
+    "eslint": "8.55.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-mocha": "10.2.0",
+    "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-simple-import-sort": "12.1.1",
+    "eslint-plugin-unused-imports": "4.0.1",
+    "globals": "15.8.0",
     "mocha": "10.2.0",
     "mock-req-res": "1.2.1",
     "nodemon": "2.0.20",
     "nyc": "15.1.0",
-    "prettier": "2.8.4",
+    "prettier": "3.3.3",
     "sinon": "15.0.1",
     "sinon-chai": "3.7.0",
     "supertest": "6.3.3",
     "ts-node": "10.9.2",
-    "typescript": "5.5.3"
+    "typescript": "5.0.2"
   },
   "prettier": {
     "printWidth": 120,
