script(dev): watch ts files

--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "test:watch": "nodemon --exec \"mocha --require ts-node/register --recursive --exit --timeout 5000 test/**/*.test.ts\"",
     "test:coverage": "nyc --reporter=html --temp-dir .coverage/build --report-dir .coverage mocha --require ts-node/register --recursive --exit --timeout 500 test/**/*.test.ts",
     "build": "tsc",
-    "dev": "nodemon --ignore test/ dist/cli.ts http",
+    "dev": "nodemon --watch src --ext ts,js,json --ignore test/ dist/cli.ts http",
     "kysely": "npx kysely-codegen --schema public --out-file=./src/db/schema.ts --dialect postgres"
   },
   "author": "",
